--- a/web.config
+++ b/web.config
@@ -5,6 +5,11 @@
             <mimeMap fileExtension=".json" mimeType="application/json" />
             <mimeMap fileExtension=".mp4" mimeType="video/mp4" />
         </staticContent>
+        <httpProtocol>
+            <customHeaders>
+                <add name="Access-Control-Allow-Origin" value="*" />
+            </customHeaders>
+        </httpProtocol>
     </system.webServer>
 </configuration>
 
